[package]
name = "bittwiddler"
version = "0.0.2"
authors = ["Robert Ou <rqou@robertou.com>"]
license = "BSD-2-Clause"
description = "Magic macros for helping to read/write bitstreams"
repository = "https://github.com/azonenberg/openfpga/tree/master/src/bittwiddler"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.5.1"

[dependencies.syn]
version = "0.13.1"
features = ["extra-traits"]
