[package]
name = "bittwiddler"
version = "0.0.2"
authors = ["Robert Ou <rqou@robertou.com>"]
license = "BSD-2-Clause"
description = "Magic macros for helping to read/write bitstreams"
repository = "https://github.com/azonenberg/openfpga/tree/master/src/bittwiddler"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0.3"

[dependencies.syn]
version = "1.0.16"
features = ["extra-traits"]
