[package]
name = "xc2bit"
version = "0.0.3"
authors = ["Robert Ou <rqou@robertou.com>"]
license = "BSD-2-Clause"
description = "A library for working with Xilinx Coolrunner-II bitstreams"
repository = "https://github.com/azonenberg/openfpga/tree/master/src/xc2bit"
keywords = ["coolrunner", "cpld", "xilinx", "bitstream", "eda"]
categories = ["command-line-utilities", "parser-implementations"]

[profile.release]
lto = true

[lib]
name = "xc2bit"
crate-type = ["rlib"]
