[package]
name = "xc2bit"
version = "0.0.3"
authors = ["Robert Ou <rqou@robertou.com>"]
license = "BSD-2-Clause"
description = "A library for working with Xilinx Coolrunner-II bitstreams"
repository = "https://github.com/azonenberg/openfpga/tree/master/src/xc2bit"
keywords = ["coolrunner", "cpld", "xilinx", "bitstream", "eda"]
categories = ["command-line-utilities", "parser-implementations"]
build = "build.rs"

[profile.release]
lto = true

[lib]
name = "xc2bit"
crate-type = ["rlib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bittwiddler = { path = "../bittwiddler", version = "0.0.1" }
jedec = { path = "../jedec", version = "0.0.2" }
yosys-netlist-json = { path = "../yosys-netlist-json", version = "0.0.2" }
