[package]
name = "xc2par"
version = "0.0.1"
build = "build.rs"

[profile.release]
lto = true

[lib]
name = "xc2par"
crate-type = ["rlib", "staticlib"]

[dependencies]
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
yosys-netlist-json = { path = "../yosys-netlist-json" }
xc2bit = { path = "../xc2bit" }
