[package]
name = "xc2par"
version = "0.0.2"
build = "build.rs"
authors = ["Robert Ou <rqou@robertou.com>"]
license = "BSD-2-Clause"
description = "Unofficial open-source Coolrunner-II place-and-route"
repository = "https://github.com/azonenberg/openfpga/tree/master/src/xc2par"
edition = "2018"

[profile.release]
lto = true

[lib]
name = "xc2par"
crate-type = ["rlib", "staticlib"]

[dependencies]
clap = "2"
slog = "2"
slog-stdlog = "3"
slog-term = "2"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
yosys-netlist-json = { path = "../yosys-netlist-json", version = "0.0.3" }
xc2bit = { path = "../xc2bit", version = "0.0.4" }
